<resources>
    <string name="app_name">BRAINWIZ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="forgot_your_password"><u>Forgot your password ?</u></string>

    <string name="empty_email">It looks like you forgot to enter the email.</string>
    <string name="empty_password">It looks like you forgot to enter the password.</string>
    <string name="enter_valid_password">Please enter valid password</string>
    <string name="enter_valid_password_char_limit">This password is too short. It should be at least 8 characters.</string>


    <string name="forgot_password">Forgot Password</string>
    <string name="ok">OK</string>
    <string name="no_internet">Oh oh&#8230; it looks like we don\'t have an internet connection.</string>
    <string name="enter_valid_email">Hmmm. It does not look like a valid email address. Please try again.</string>
    <string name="send_email">Send Email</string>
    <string name="please_enter_your_email_address_and_then_click_request_password">Please, enter your email address and then click \"Request Password\"</string>
    <string name="we_sent_you_a_verification_mail_n_please_check_your_inbox">We sent you a verification Email.\n Please check your inbox.</string>
    <string name="email_address">Email Address</string>

    <string name="digits_address">, ,-,,,,0,1,2,3,4,5,6,7,8,9,/,qwertzuiopasdfghjklyxcvbnm,QWERTZUIOPASDFGHJKLYXCVBNM</string>
    <string name="digits_char">\, ,qwertzuiopasdfghjklyxcvbnm,QWERTZUIOPASDFGHJKLYXCVBNM</string>
    <string name="digits_name">qwertzuiopasdfghjklyxcvbnm QWERTZUIOPASDFGHJKLYXCVBNM</string>
    <string name="reviews_this_app">Rate this app</string>
    <string name="please_review_this_app_and_encourage_us_to_give_better_services_to_you">Please review this app and encourage us to give better services to you</string>
    <string name="help_your_friends_to_know_this_app_and_make_them_so_benefices_as_you_in_case_of_crt">Help your friends to know this app and make them so benefices as you in case of CRT.</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="test_series">Test\nSeries</string>
    <string name="video_gallery">Video\nGallery</string>
    <string name="online_tests">Online\nTests</string>
    <string name="practice_tests">Practice\nTests</string>
    <string name="reviews">Reviews</string>
    <string name="testimonials">Testimonials</string>
    <string name="share_this_app">Share this app</string>
    <string name="cancel">Cancel</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="don_t_you_have_an_account_please_register">Don\'t have an account? Register Here</string>
    <string name="welcome_back">Welcome back,</string>
    <string name="it_s_great_pleasure_to_see_you_again">It\'s great pleasure to see you again</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="location">Location</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="please_check_once_our_privacy_policy_terms_of_use"><![CDATA[Please check once our Privacy policy & Terms of use]]></string>
    <string name="registration">Registration</string>
    <string name="trained_thousands_of_students_across_india">Trained Thousands of students across INDIA</string>
    <string name="arithmetic">Arithmetic</string>
    <string name="topics">%s Topics</string>
    <string name="videos">Videos</string>
    <string name="tests">%s Tests</string>
    <string name="tests_label">Tests</string>
    <string name="logical_reasoning">Logical Reasoning</string>
    <string name="verbal_ability">Verbal Ability</string>
    <string name="password">Password</string>
    <string name="start">Start</string>
    <string name="questions">%s Questions</string>
    <string name="mins">%s Mins</string>
    <string name="instructions">Instructions : </string>
    <string name="instructions_text">
        1. Test consists of 3 sections i.e. Verbal, Arithmatic, reasoning,\n
2. After finishing each section you will have a break time of 1 min.\n
3. Once the section is completed you cannot go back to that section.\n
4. You can chose the section you want to attempt from Instruction
page(current).\n
5. Section can be status from the top navigation tab.\n
6. Once you click on compete button a confirmation will be asked whether
you want to complete the section or not.\n
7. Each question will be of 1 mark.\n
8. You will not have multiple choice questions.\n
9. You need to click on "Next/ Save " button on order to save your marked
answer.\n
10. Result will be displayed immediately after you complete all the three
sections
    </string>
    <string name="call">Call</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="weekly_schedule">Weekly\nSchedule</string>
    <string name="phone">Phone:</string>
    <string name="_81421_23938">+91 8142123938</string>
    <string name="gobrainwiz_gmail_com">gobrainwiz@gmail.com</string>
    <string name="address">Address :</string>
    <string name="brainwiz_address">BRAINWIZ # 3rd Floor Beside Reliance Fresh \nNear Satyam Theatre , Srinivasa Nagar ,Ameerpet , Hyderabad.</string>
    <string name="view">view</string>
    <string name="onlinetest">Online Tests</string>
    <string name="explanation">Explanation</string>
    <string name="previous">Previous</string>
    <string name="submit">Submit</string>
    <string name="total_questions">%d  Total </string>
    <string name="questions_attempted">%d  Attempted </string>
    <string name="questions_unattempted">%d  UnAttempted </string>
    <string name="correct">%d  Correct </string>
    <string name="welcome">Welcome</string>
    <string name="your_score">Your Score</string>
    <string name="your_rank">Your Rank %d out of %d</string>
    <string name="title_activity_sample">SampleActivity</string>
    <string name="review">Review</string>
    <string name="sets">%s Sets</string>

    <string name="practicetests">Practice Tests</string>
    <string name="notications">Notifications</string>
    <string name="select_section">Select any one of the section</string>
    <string name="watch_it_later">Watch it later \t</string>
    <string name="your_result">Your Result</string>
    <string name="change_password">change password</string>
    <string name="update_profile">Update Profile</string>
    <string name="like_to_know_about_brainwiz">Like to know about BRAINWIZ</string>
    <string name="video_explanation">Video Explanation</string>
    <string name="watch_this_video_explination_for_better_understanding">Watch this video explination for better understanding.</string>
    <string name="name_">Name : %s</string>
    <string name="email_">Email : %s</string>
    <string name="mobile_number_">Mobile : %s</string>
    <string name="location_">College : %s</string>
    <string name="wrong">%d  Wrong </string>
    <string name="pick_image_intent_text">Pick your profile image</string>
    <string name="choose_photo_title">Choose Photos</string>
    <string name="register">register</string>
    <string name="confirm_otp">Confirm OTP and create your password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm">Confirm</string>
    <string name="email_mobile_no">Email/Mobile no</string>
    <string name="reset_my_password">Reset My Password</string>
    <string name="request_password">Request Password</string>
    <string name="welcome_to_brainwiz">Welcome to</string>
    <string name="inprogress">InProgress</string>
    <string name="description">your password</string>
    <string name="break_time">%d Seconds Break </string>
    <string name="review_questions">Review Questions</string>
    <string name="score_card">Score Card</string>
    <string name="done">Done</string>
    <string name="default_notification_channel_id">10000</string>
    <string name="leave_any_query">any queries</string>
    <string name="request_call_back">Request a Call Back</string>
    <string name="college_name">College Name</string>
    <string name="current">Current</string>
    <string name="attempted">Attempted</string>


    <string name="html_content">

    </string>
    <string name="no_tests_found">No tests found.</string>
    <string name="related_videos">Related Videos</string>
    <string name="your_message_has_been_sent">Your message has been sent.</string>
    <string name="we_have_received_your_inquiry_and_will_respond_n_thank_you_for_your_interest">We have received your inquiry and will respond Thank you for your interest.</string>
    <string name="success">Success!</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="my_tests">My Tests</string>
    <string name="subscribe">Subscribe</string>
    <string name="notifications">Notifications</string>
    <string name="join_brainwiz">Join BRAINWIZ</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>

</resources>
