<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"
            android:visible="false" />

        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/profile"
            android:visible="true" />
        <item
            android:id="@+id/nav_my_tests"
            android:icon="@drawable/ic_assignment"
            android:title="@string/my_tests" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/subscribe"
            android:visible="true" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications"
            android:title="@string/notifications"
            app:actionViewClass="android.widget.TextView" />


    </group>

    <item android:title="Communicate">
        <menu>

            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/join_brainwiz" />

            <item
                android:id="@+id/nav_contact_us"
                android:icon="@drawable/ic_call"
                android:title="@string/contact_us"
                android:visible="false" />

            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_call"
                android:title="@string/about_us" />

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share_with_friends" />


        </menu>


    </item>


    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_power"
        android:title="Logout" />

</menu>
