<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <brainwiz.gobrainwiz.RoundishImageView
            android:id="@+id/profile_imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="@dimen/dimen_16"
            android:contentDescription="@string/nav_header_desc"
            app:cornerRadius="100dp"
            app:roundedCorners="ALL"
            app:srcCompat="@mipmap/ic_launcher_round" />


        <TextView
            android:id="@+id/profile_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_16"
            android:text="User" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dimen_10">

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_16"
                android:fontFamily="@font/bold"
                android:gravity="start"
                android:text="@string/name_"
                android:textColor="@color/black"
                android:textSize="@dimen/font_16" />

            <TextView
                android:id="@+id/profile_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_16"
                android:fontFamily="@font/bold"
                android:text="@string/email_"
                android:textColor="@color/black"
                android:textSize="@dimen/font_16" />

            <TextView
                android:id="@+id/profile_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_16"
                android:fontFamily="@font/bold"
                android:text="@string/mobile_number_"
                android:textColor="@color/black"
                android:textSize="@dimen/font_16" />

            <TextView
                android:id="@+id/profile_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_16"
                android:fontFamily="@font/bold"
                android:text="@string/location_"
                android:textColor="@color/black"
                android:textSize="@dimen/font_16" />

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/profile_update"
                style="@style/ButtonStyle"
                android:layout_marginTop="@dimen/dimen_16"
                android:text="@string/update_profile"
                android:visibility="visible" />

        </LinearLayout>


    </LinearLayout>
</layout>