<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/divider">

        <TextView
            android:id="@+id/registration_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/dimen_20"
            android:layout_marginTop="@dimen/dimen_20"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/registration"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/font_16" />

        <android.support.v7.widget.CardView
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/registration_label"
            android:layout_margin="@dimen/dimen_10"
            app:cardCornerRadius="@dimen/dimen_10"
            app:cardUseCompatPadding="true"
            app:contentPadding="@dimen/dimen_16">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/name"
                        style="@style/EditTextStyle"
                        android:hint="@string/name" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/email"
                        style="@style/EditTextStyle"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_10">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/mobile"
                        style="@style/EditTextStyle"
                        android:hint="@string/mobile"
                        android:inputType="number"
                        android:maxLength="10" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/location"
                        style="@style/EditTextStyle"
                        android:hint="@string/location" />

                </android.support.design.widget.TextInputLayout>


                <TextView
                    android:id="@+id/login_here"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/dimen_10"
                    android:layout_marginTop="@dimen/dimen_20"
                    android:fontFamily="@font/raleway_medium"
                    android:text="@string/already_have_an_account_login"
                    android:textSize="@dimen/font_10" />

                <TextView
                    android:id="@+id/privacy_policy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/dimen_10"
                    android:layout_marginTop="@dimen/dimen_20"
                    android:fontFamily="@font/raleway_medium"
                    android:text="@string/please_check_once_our_privacy_policy_terms_of_use"
                    android:textSize="@dimen/font_10"
                    android:visibility="invisible" />

            </LinearLayout>
        </android.support.v7.widget.CardView>


        <ImageView
            android:id="@+id/registration_arrow"
            android:layout_width="@dimen/dimen_40"
            android:layout_height="@dimen/dimen_40"
            android:layout_alignBottom="@id/login_layout"
            android:layout_alignEnd="@id/login_layout"
            android:layout_marginBottom="-15dp"
            android:layout_marginEnd="@dimen/dimen_20"
            android:background="@drawable/circle_gradient_bg"
            android:padding="@dimen/dimen_5"
            android:src="@drawable/ic_arrow_forward"
            android:translationZ="@dimen/dimen_10" />

        <TextView
            android:id="@+id/welcome_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dimen_30"
            android:fontFamily="@font/raleway_medium"
            android:gravity="center"
            android:text="@string/welcome_back"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/font_18" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcome_label"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/raleway_medium"
            android:gravity="center"
            android:text="@string/it_s_great_pleasure_to_see_you_again"
            android:textColor="@color/white" />


    </RelativeLayout>
</layout>