<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/alert_title"
        style="@style/HeaderTextStyle"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dimen_10"
        android:fontFamily="@font/bold"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/bluePrimary"
        android:textSize="@dimen/font_20" />


    <TextView
        android:id="@+id/alert_message"
        style="@style/TextStyle"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dimen_16"
        android:gravity="center"
        android:singleLine="false"
        android:text="asdasda adasdasdasd  asdasdasdasdad asdasdadsadad  asdsdasdasdas  adsasdadasdada
        " />

    <LinearLayout
        style="@style/MatchWrap"
        android:padding="@dimen/dimen_16"
        android:weightSum="2">

        <Button
            android:id="@+id/alert_positive"
            style="@style/ButtonStyle"
            android:layout_weight="1"
            android:text="@string/ok"
            android:visibility="gone" />

        <Button
            android:id="@+id/alert_negative"
            style="@style/ButtonBlackStyle"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:visibility="gone" />

    </LinearLayout>
</LinearLayout>